--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>Fucking NSImage Syntax</title>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-</head><body><div class="content" style="margin:48px;"><h1>Fucking NSImage Syntax</h1><h2>Public Images</h2><table class="pure-table pure-table-bordered"><thead><tr><th>image</th><th>name</th><th>raw value</th></tr></thead><tbody>
+</head><body><div class="content" style="margin:48px;"><h1>Fucking NSImage Syntax</h1><p>A list of names can be used for +[NSImage imageNamed:]</p><h2>Public Images</h2><table class="pure-table pure-table-bordered"><thead><tr><th>image</th><th>name</th><th>raw value</th></tr></thead><tbody>
 <tr><td><img class="pure-img" src="NSActionTemplate.png"></td><td>NSImageNameActionTemplate</td><td>@"NSActionTemplate"</td></tr>
 <tr><td><img class="pure-img" src="NSAddTemplate.png"></td><td>NSImageNameAddTemplate</td><td>@"NSAddTemplate"</td></tr>
 <tr><td><img class="pure-img" src="NSAdvanced.png"></td><td>NSImageNameAdvanced</td><td>@"NSAdvanced"</td></tr>
